# va

./: .gitignore  android.keystore  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml  release-apk.yml
api/: build.gradle
api/src/main/java/vh1/: f.java  g.java
api/src/main/java/yf1/: f.java  g.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: a.js  classes.dex  node.crt  xposed_init
app/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
app/src/main/cpp/bitmap/: BitmapUtil.cpp  BitmapUtil.h  CMakeLists.txt  TraceUtil.cpp
app/src/main/proto/: actor.proto  common.proto  nonblocking.proto
app/src/main/res/drawable-xxhdpi/: ic_corp_icon_badge_color.xml  ic_corp_icon_badge_shadow.xml
app/src/main/res/layout/: activity_install.xml  activity_limited.xml  activity_main.xml  activity_new_device.xml  activity_trace_record.xml  activity_traffic.xml  custom_list_item.xml  dialog_proxy_editor.xml  dialog_task_progress.xml  item_apps.xml  item_apps_add.xml  item_profile_title.xml  item_proxy.xml  item_remote.xml  item_text.xml  pager_camera.xml  pager_grpc.xml  pager_ota.xml  pager_proxy.xml  pager_remote.xml  pager_task.xml
beer/: build.gradle
beer/src/main/: AndroidManifest.xml
beer/src/main/cpp/: CMakeLists.txt
compiler/: build.gradle
core/: build.gradle  consumer-rules.pro  proguard-rules.pro
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: Android.mk
docs/: android-ams-icontentprovider.md  biometric-iauth-ibiometric-service.md
gradle/wrapper/: gradle-wrapper.properties
(+891 files in other folders)
